[package]
name = "rio-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Shared configuration, observability, and error types for rio-build"

[features]
# Shared sqlx migration runner (migrate.rs). Only rio-store +
# rio-scheduler enable this — gateway/builder/controller stay
# sqlx-free.
postgres = ["dep:sqlx"]
# Shared aws-sdk-s3 client builder (s3.rs). Only rio-store +
# rio-scheduler enable this.
aws = ["dep:aws-config", "dep:aws-sdk-s3"]

[dependencies]
# Optional: shared migration wrapper (postgres feature).
sqlx = { workspace = true, optional = true }
# Optional: shared S3 client builder (aws feature).
aws-config = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }

# Logging & metrics
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# OpenTelemetry (optional OTLP export, RIO_OTEL_ENDPOINT-gated)
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }

# Configuration (figment: TOML + env + CLI layered)
figment = { workspace = true }
serde = { workspace = true }

# Async runtime (for spawn_monitored)
tokio = { workspace = true }
futures-util = { workspace = true }
# CancellationToken (graceful shutdown, signal.rs).
tokio-util = { workspace = true }
# Backoff jitter (backoff.rs). Not crypto — thread-local SmallRng.
rand = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
# Health service types for the shared spawn_health_plaintext helper.
tonic-health = { workspace = true }
# HTTP /healthz + /readyz router (kubelet probes) + spawn_axum.
axum = { workspace = true }
# CryptoProvider install in server::bootstrap — every binary's first
# line. Previously 5×-duplicated at each main.rs top.
rustls = { workspace = true }

# PEM body validation (tls.rs validate_pem_sections).
base64 = { workspace = true }
# schema.rs `Uuid` columns. Auth-stack `serde` feature moved to rio-auth.
uuid = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
# Router::oneshot for health-router unit test.
tower.workspace = true
# libc::raise for signal self-delivery test.
libc = "0.2"
# start_paused + tokio::time::advance in spawn_drain_task test.
tokio = { workspace = true, features = ["test-util"] }
figment.workspace = true
# In-memory cert generation for mTLS integration test. Generates
# a CA + client/server leaf certs without touching disk — proves
# the load_server_tls/load_client_tls output actually works in a
# real tonic handshake.
# TcpListenerStream for test server.
tokio-stream = { workspace = true, features = ["net"] }
