[package]
name = "rio-crds"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "CustomResourceDefinition types for rio-build (BuilderPool, BuilderPoolSet, FetcherPool, ComponentScaler)"

# CRD types + thin kube::Error classification helpers, extracted from
# rio-controller so rio-cli (P0237) and rio-scheduler can depend on
# them without pulling the full reconciler stack (~500 transitive
# deps via kube-runtime). No reconcile logic, no kube::Client, no
# tokio runtime — only `kube` with the `derive` feature.
#
# The error helpers (KubeErrorExt/KubeResultExt) live here because
# rio-common is intentionally kube-free and rio-controller is too
# heavy for scheduler/xtask to depend on. This crate is the lightest
# kube-adjacent leaf in the workspace.

[dependencies]
# `derive` feature only — CustomResource + KubeSchema proc-macros.
# NOT `runtime`/`client`: those pull the reconciler machinery.
kube = { workspace = true }
k8s-openapi = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
# kube's CustomResource derive macro emits `serde_json::` paths
# directly in the generated code — must be a direct dep, not dev.
serde_json = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
# crd_serializes test: YAML smoke check.
serde_yml = { workspace = true }
