[package]
name = "rio-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "SSH gateway and Nix protocol frontend for rio-build"

[[bin]]
name = "rio-gateway"
path = "src/main.rs"

[dependencies]
rio-common = { workspace = true }
rio-nix = { workspace = true }
rio-proto = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
# Direct rustls for CryptoProvider::install_default(). Needed now that
# tonic tls-aws-lc is enabled (Phase 3b mTLS). Without the install call,
# dual ring+aws-lc-rs feature activation → rustls panic on first TLS use.
rustls = { workspace = true }
# grpc.health.v1.Health for K8s readiness probes. Gateway's main
# protocol is SSH (russh, no tonic server), so we spawn a separate
# tonic server on health_addr with ONLY the health service. The K8s
# readinessProbe hits that port, not 22.
tonic-health = { workspace = true }
russh = { workspace = true }
ssh-key = { workspace = true }
hex = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
# wopRegisterDrvOutput/wopQueryRealisation parse/emit Realisation JSON
# on the wire. Was dev-only (golden tests); promoted now that the opcodes
# are real instead of stubs.
serde_json = { workspace = true }

[dev-dependencies]
# tests/metrics_registered.rs: custom Recorder intercepts describe_*
# calls — asserts every spec'd metric name is covered.
metrics = { workspace = true }
rio-test-support = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }
