[package]
name = "rio-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "SSH gateway and Nix protocol frontend for rio-build"

[[bin]]
name = "rio-gateway"
path = "src/main.rs"

[dependencies]
rio-common = { workspace = true }
rio-nix = { workspace = true }
rio-proto = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
# grpc.health.v1.Health for K8s readiness probes. Gateway's main
# protocol is SSH (russh, no tonic server), so we spawn a separate
# tonic server on health_addr with ONLY the health service. The K8s
# readinessProbe hits that port, not 22.
tonic-health = { workspace = true }
russh = { workspace = true }
ssh-key = { workspace = true }
hex = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
# Per-tenant rate limiting keyed on tenant_name (authorized_keys comment).
# Disabled by default; enabled via gateway.toml [rate_limit]. See
# r[gw.rate.per-tenant].
governor = { workspace = true }
# JWT issuance (P0258): Claims.sub is Uuid; signing key is ed25519.
# Both via rio-common::jwt but the gateway constructs the SigningKey
# (K8s Secret load is P0260's job) and generates the jti Uuid.
uuid = { workspace = true }
ed25519-dalek = { workspace = true }
# JWT signing seed is a K8s Secret mount: 32 bytes base64'd. main.rs
# decodes; server.rs passes the SigningKey to mint_session_jwt.
base64 = { workspace = true }
# wopRegisterDrvOutput/wopQueryRealisation parse/emit Realisation JSON
# on the wire. Was dev-only (golden tests); promoted now that the opcodes
# are real instead of stubs.
serde_json = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
# tests/metrics_registered.rs: custom Recorder intercepts describe_*
# calls — asserts every spec'd metric name is covered.
metrics = { workspace = true }
rio-test-support = { workspace = true }
# tests/functional/: RioStack fixture runs REAL StoreServiceImpl (not
# MockStore) backed by ephemeral PG. No dep cycle: both rio-gateway and
# rio-store depend on rio-proto; neither depends on the other.
rio-store = { workspace = true }
sqlx = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }
# figment::Jail for main.rs all_subconfigs standing-guard tests.
figment = { workspace = true, features = ["test"] }

[build-dependencies]
# build.rs greps metric-emit literals for the emit→describe check.
# Already transitive in Cargo.lock; zero new lockfile churn.
regex = { workspace = true }
