[package]
name = "rio-nix"
description = "Nix protocol types and wire format"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = { workspace = true }
bytes = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
tracing = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
