[package]
name = "rio-nix"
description = "Nix protocol types and wire format"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = { workspace = true }
hex = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
