[package]
name = "rio-nix"
description = "Nix protocol types and wire format"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
# Eager in-memory NAR dump/restore (`dump_path`, `extract_to_path`). Kept as a
# byte-exact differential-testing oracle for the streaming implementations;
# enabled via dev-dependencies and the fuzz crate, not production builds.
test-oracle = []

[dependencies]
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
tracing = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
anyhow = { workspace = true }
rstest = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-test = { workspace = true }
