[package]
name = "rio-proto"
description = "Protobuf/gRPC service definitions for rio-build"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio-stream = { workspace = true }
tokio = { workspace = true }
rio-nix = { workspace = true }
tracing = { workspace = true }

# phase2b: W3C traceparent inject/extract via tonic interceptor
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
# Interceptor roundtrip test needs a real (non-noop) tracer to get
# non-zero trace IDs, and the W3C propagator to register.
opentelemetry_sdk = { workspace = true }
# Contract tests check rio-common limits + check_bound.
rio-common = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
