[package]
name = "rio-scheduler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "DAG-aware build scheduler for rio-build"

[[bin]]
name = "rio-scheduler"
path = "src/main.rs"

[dependencies]
rio-common = { workspace = true }
rio-proto = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
# P0473: concurrent QueryPathInfo fan-out for eager substitute fetch
# (r[sched.merge.substitute-fetch]). FuturesUnordered keeps the
# actor-blocking window bounded when a DAG has hundreds of paths.
futures-util = { workspace = true }
# grpc.health.v1.Health for K8s readiness probes. C3 gates SERVING on
# is_leader so the K8s Service routes only to the leader replica.
tonic-health = { workspace = true }
# coordination.k8s.io/v1 Lease for leader election. In-house
# implementation (src/lease/election.rs) using kube::Api::replace()
# for resourceVersion-guarded optimistic concurrency + local-
# monotonic observed-record expiry (client-go's model). Gated on
# RIO_LEASE_NAME env — unset means non-K8s mode (generation stays
# at 1, VM tests unaffected).
kube = { workspace = true }
k8s-openapi = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
# P0271: ListBuilds keyset cursor encoding (URL_SAFE_NO_PAD). Already
# workspace-level via rio-common/rio-store; zero lockfile churn.
base64 = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rio-nix = { workspace = true }

# phase2c D5: priority queue. f64 doesn't impl Ord (NaN);
# OrderedFloat wraps it with a total ordering.
ordered-float = { workspace = true }

# phase2b: build-log S3 flush (gzip + PUT logs/{build_id}/{drv_hash}.log.gz)
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
flate2 = { workspace = true }
# phase2b: log ring buffer written from BuildExecution recv tasks
dashmap = { workspace = true }
serde = { workspace = true }
# X9 auto-pin: SHA-256 store paths for scheduler_live_pins hashes.
# Was dev-only; promoted to prod for db.rs pin_live_inputs.
sha2 = { workspace = true }
# P0253: ca/resolve.rs hex-encodes modular hashes for ResolveError
# messages and instrument span fields.
hex = { workspace = true }
# P0230: Arc<parking_lot::RwLock<Vec<SizeClassConfig>>> for rebalancer
# writes. Sync lock — writes hourly, reads per-dispatch. Keeps classify() sync.
parking_lot = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
rio-store = { workspace = true }
rio-test-support = { workspace = true }
tracing-test = { workspace = true }
aws-smithy-mocks = { workspace = true }
aws-sdk-s3 = { workspace = true, features = ["test-util"] }
# grpc/tests.rs trace_id header test: needs the tracing→OTel bridge so
# #[instrument] spans get a real TraceId. Already transitive via rio-common
# (zero lockfile churn); promoted to direct dev-deps for explicitness.
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
# figment::Jail for env-var isolation in lease.rs tests (env is
# process-global; parallel tests would race without isolation).
figment = { workspace = true, features = ["test"] }
# lease/election.rs integration tests: ApiServerVerifier scenarios
# need http::Method for the expected-request shape.
http = { workspace = true }

[build-dependencies]
# build.rs greps metric-emit literals from src/ for the emit→describe
# check in tests/metrics_registered.rs. Already transitive in Cargo.lock
# (via tracing-subscriber etc.); promoting to direct build-dep is zero
# new lockfile churn.
regex = { workspace = true }
