[package]
name = "rio-scheduler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "DAG-aware build scheduler for rio-build"

[[bin]]
name = "rio-scheduler"
path = "src/main.rs"

[features]
# AdminService.InjectBuildSample fixture (sla-sizing VM scenario): writes
# a synthetic build_samples row keyed on (pname, system, tenant). Runtime-
# gated on RIO_ADMIN_TEST_FIXTURES so default-on is harmless in production;
# default because crate2nix bakes features at lock-time and the VM-test
# workspace package has no per-crate feature override hook (same pattern
# as rio-builder's RIO_BUILDER_SCRIPT intercept).
default = ["test-fixtures"]
test-fixtures = []

[dependencies]
rio-common = { workspace = true, features = ["postgres", "aws"] }
rio-auth = { workspace = true }
rio-proto = { workspace = true }
# `schema`-only: just `realisations` + `error` (sqlx + thiserror), no
# aws-sdk-s3/axum/moka/reqwest. Lets ca/resolve.rs delegate to
# `rio_store::realisations::query` instead of carrying a raw-SQL copy
# — single owner for the realisations table SQL. The dev-dep below
# adds `test-utils` (→ `server`) for test fixtures.
rio-store = { workspace = true, features = ["schema"] }

tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
# D3: scheduler natively serves gRPC-Web on its main port so the
# dashboard ingress is a plain HTTP router (no grpc_web filter).
tonic-web = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
# P0473: concurrent QueryPathInfo fan-out for eager substitute fetch
# (r[sched.merge.substitute-fetch]). FuturesUnordered keeps the
# actor-blocking window bounded when a DAG has hundreds of paths.
futures-util = { workspace = true }
# grpc.health.v1.Health for K8s readiness probes. C3 gates SERVING on
# is_leader so the K8s Service routes only to the leader replica.
tonic-health = { workspace = true }
# coordination.k8s.io/v1 Lease for leader election. In-house
# implementation (src/lease/election.rs) using kube::Api::replace()
# for resourceVersion-guarded optimistic concurrency + local-
# monotonic observed-record expiry (client-go's model). Gated on
# RIO_LEASE_NAME env — unset means non-K8s mode (generation stays
# at 1, VM tests unaffected).
kube = { workspace = true }
k8s-openapi = { workspace = true }
# KubeErrorExt::is_conflict for the lease election 409 branches.
# rio-crds is type-defs + a tiny kube::Error helper — no runtime deps.
rio-crds = { workspace = true }
# Leader election + LeaderState (extracted from src/lease/; B1).
# `pub use rio_lease as lease` in lib.rs keeps the `crate::lease::*`
# path stable for actor/admin/sla consumers.
rio-lease = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
# P0271: ListBuilds keyset cursor encoding (URL_SAFE_NO_PAD). Already
# workspace-level via rio-common/rio-store; zero lockfile churn.
base64 = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
# EnumCount derive on ActorError so guards_tests.rs's `cases.len()`
# assertion can't be left stale when a variant is added (it has been,
# twice). Compile-time pin (`_actor_error_exhaustive`) only catches
# the match arm; this catches the test-row.
strum = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rio-nix = { workspace = true }

# phase2c D5: priority queue. f64 doesn't impl Ord (NaN);
# OrderedFloat wraps it with a total ordering.
ordered-float = { workspace = true }

# phase2b: build-log S3 flush (zstd + PUT logs/{build_id}/{drv_hash}.log.zst).
# Client builder shared with rio-store via rio-common's `aws` feature;
# aws-sdk-s3 stays a direct dep for ByteStream/PutObject types.
# WONTFIX: not moving behind a rio-store PutLog RPC — see ADR-024.
aws-sdk-s3 = { workspace = true }
# ADR-023 phase-13: live spot-price poll (sla/cost.rs poll_spot_once).
# Same `aws_config::from_env()` IRSA chain as the S3 client; aws-config
# is already transitive via rio-common's `aws` feature, promoted to
# direct here for the EC2 client builder.
aws-sdk-ec2 = { workspace = true }
aws-config = { workspace = true }
zstd = { workspace = true }
# phase2b: log ring buffer written from BuildExecution recv tasks
dashmap = { workspace = true }
# §13a `dispatched_cells: SmallVec<[Cell;4]>` — full A' (bug_030).
smallvec = { workspace = true }
serde = { workspace = true }
# ADR-023 phase-11: SeedCorpus JSON load/import (sla::prior).
serde_json = { workspace = true }
# X9 auto-pin: SHA-256 store paths for scheduler_live_pins hashes.
# Was dev-only; promoted to prod for db.rs pin_live_inputs.
sha2 = { workspace = true }
# P0253: ca/resolve.rs hex-encodes modular hashes for ResolveError
# messages and instrument span fields.
hex = { workspace = true }
# Sync RwLock for SLA fit-cache hot-swap (refit-hourly write, per-
# dispatch read; no .await across guard).
parking_lot = { workspace = true }
# ADR-023 §Threat-model: per-tenant SlaEstimator fit cache capped at
# `[sla].max_keys_per_tenant` so one tenant submitting 10⁶ distinct
# pnames can't grow the in-memory cache unbounded.
lru = { workspace = true }
# ADR-023: NNLS fit + Φ/Student-t quantiles for SLA-driven sizing.
# See sla/fit.rs.
nalgebra = { workspace = true }
statrs = { workspace = true }
# ADR-023 §4.2: weighted-case-pairs bootstrap for T_min CI (sla/bootstrap.rs).
# StdRng seeded from sample content → reproducible CI per fit.
rand = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
rio-store = { workspace = true, features = ["test-utils"] }
rio-test-support = { workspace = true }
tracing-test = { workspace = true }
# parameterized test tables — collapses ~60 hand-rolled test clusters
# (poison/ca-compare/resource-floor/cache-hit matrices) in actor/tests/.
# default-features off: we don't need the `async-timeout` feature
# (tokio::test handles that), saving the futures-timer dep.
rstest = { workspace = true }
# ADR-023: property invariants on T(c) monotonicity + solve_tier bounds
# (tests/sla_fit_props.rs).
proptest = { workspace = true }
# admin/tests/mod.rs::admin_rpc_gate_coverage parses admin.proto via
# include_str! + regex (rio-proto/build.rs doesn't emit a
# FILE_DESCRIPTOR_SET; rio-test-support's is for MockAdmin codegen only).
regex = { workspace = true }
aws-smithy-mocks = { workspace = true }
# sla/solve.rs + cost.rs: assert that documented-but-unwired metrics are
# actually emitted. Already transitive via metrics-exporter-prometheus
# (zero lockfile churn); promoted to direct dev-dep for the
# `debugging::DebuggingRecorder` snapshotter.
metrics-util = { version = "0.20", features = ["debugging"] }
aws-sdk-s3 = { workspace = true, features = ["test-util"] }
aws-sdk-ec2 = { workspace = true, features = ["test-util"] }
# grpc/tests.rs trace_id header test: needs the tracing→OTel bridge so
# #[instrument] spans get a real TraceId. Already transitive via rio-common
# (zero lockfile churn); promoted to direct dev-deps for explicitness.
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
figment.workspace = true
# sla/config.rs tests: parse `[sla.hw_classes.<h>]` table syntax directly
# (the actual on-disk format) rather than via figment's full overlay.
toml.workspace = true
# lease/election.rs integration tests: ApiServerVerifier scenarios
# need http::Method for the expected-request shape.
http = { workspace = true }
