[package]
name = "rio-spike"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "FUSE+overlay+sandbox platform validation spike for rio-build workers"

[[bin]]
name = "rio-spike"
path = "src/main.rs"

[dependencies]
# FUSE filesystem (0.17 adds passthrough mode support)
fuser = "0.17"

# SQLite for synthetic Nix store DB
rusqlite = { version = "0.38", features = ["bundled"] }

# Linux syscalls (mount, umount2, etc.)
nix = { version = "0.31", features = ["mount", "sched", "fs", "user"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Latency histograms for benchmarks
hdrhistogram = "7"

# Directory traversal
walkdir = "2"

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true

# Serialization (for parsing nix path-info --json)
serde.workspace = true
serde_json.workspace = true

# Temp dirs for overlays
tempfile.workspace = true

# Signal handling
ctrlc = "3"

# Crypto (for NAR hash computation)
sha2.workspace = true
hex.workspace = true
